<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.uma.mapas.MainActivity"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/geo"
        android:id="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/logo" />

    <Button
        android:text="@string/genetic_alg"
        android:layout_height="wrap_content"
        android:id="@+id/GeneticButton"
        android:layout_width="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/UFDLButton"
        android:layout_alignStart="@+id/UFDLButton"
        android:layout_marginBottom="116dp"
        android:onClick="Onclick" />

    <Button
        android:text="@string/ufdl"
        android:layout_height="wrap_content"
        android:id="@+id/UFDLButton"
        android:layout_width="200dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/GeneticButton"
        android:layout_centerHorizontal="true"
        android:onClick="Onclick"
        android:enabled="false" />

    <Button
        android:text="@string/layer_admin"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLayer"
        android:layout_width="200dp"
        android:layout_above="@+id/UFDLButton"
        android:layout_alignLeft="@+id/UFDLButton"
        android:layout_alignStart="@+id/UFDLButton"
        android:layout_marginBottom="12dp"
        android:onClick="Onclick"
        android:enabled="false" />

    <TextView
        android:text="@string/not_identified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="39dp"
        android:id="@+id/textViewUser"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="onLogin"
        android:textColor="@android:color/holo_red_light" />

</RelativeLayout>
